Replace of deprecated methods